--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,11 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1"
+        "react-scripts": "^5.0.1",
+        "flagship": "^1.0.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "PORT=3001 react-scripts start",
         "build": "react-scripts build",
         "eject": "react-scripts eject"
     },
