--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "^5.0.1",
-        "flagship": "^1.0.0"
+        "flagship-sdk": "^1.0.0"
     },
     "scripts": {
         "start": "PORT=3001 react-scripts start",
